[ILVerify] Implement Ldftn/Ldvirtftn instruction (#4497)
* Added VerifierError for ldftn/ldvirtftn of constructor.

* Implemented basic ldftn and basic delegate creation functionality.

* Added TestName attribute to TestCases to further shorten display name of tests.

* Implemented basic ldftn functionality and constraint checks. Moved type conversions to helper class.

* Added test cases for ldftn and newobj of constrained generic types.

* Added test cases for ldvirtftn. Fixed display of invalid test errors.

* Changed constraints checks to use ConstraintsHelper class. Added additional test cases for GenericParam as generic parameter with special constraints.

* Added additional constraints check for generic parameters with special constraints.

* Fixed typo in filename of TypeSystemConstraintsHelpers.

* Fixed typo in 'ILDisassember'.

* Slight code refactoring. Added reference to test case assert issue.

--- a/src/ILVerify/src/ILVerify.csproj
+++ b/src/ILVerify/src/ILVerify.csproj
@@ -16,6 +16,7 @@
     <Compile Include="SimpleArrayOfTRuntimeInterfacesAlgorithm.cs" />
     <Compile Include="SimpleTypeSystemContext.cs" />
     <Compile Include="VerifierError.cs" />
+    <Compile Include="TypeSystemHelpers.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -241,8 +242,8 @@
     <Compile Include="..\..\Common\src\TypeSystem\IL\MethodILDebugView.cs">
       <Link>IL\MethodILDebugView.cs</Link>
     </Compile>
-    <Compile Include="..\..\Common\src\TypeSystem\IL\ILDisassember.cs">
-      <Link>IL\ILDisassember.cs</Link>
+    <Compile Include="..\..\Common\src\TypeSystem\IL\ILDisassembler.cs">
+      <Link>IL\ILDisassembler.cs</Link>
     </Compile>
     <Compile Include="..\..\Common\src\TypeSystem\IL\InstantiatedMethodIL.cs">
       <Link>IL\InstantiatedMethodIL.cs</Link>
@@ -273,6 +274,9 @@
     </Compile>
     <Compile Include="..\..\Common\src\System\FormattingHelpers.cs">
       <Link>Common\System\FormattingHelpers.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Common\src\TypeSystem\Common\TypeSystemConstraintsHelpers.cs">
+      <Link>TypeSystem\Common\TypeSystemConstraintsHelpers.cs</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
