Add support to cmake files for wasm build

--- a/src/Native/Runtime/CMakeLists.txt
+++ b/src/Native/Runtime/CMakeLists.txt
@@ -133,6 +133,8 @@ else()
     set(ARCH_SOURCES_DIR arm)
   elseif(CLR_CMAKE_PLATFORM_ARCH_I386)
     set(ARCH_SOURCES_DIR i386)
+  elseif(CLR_CMAKE_PLATFORM_ARCH_WASM)
+    set(ARCH_SOURCES_DIR wasm)
   endif()
 
   list(APPEND RUNTIME_SOURCES_ARCH_ASM
