--- a/src/Native/CMakeLists.txt
+++ b/src/Native/CMakeLists.txt
@@ -90,6 +90,11 @@ if(CMAKE_SYSTEM_NAME STREQUAL NetBSD)
     set(CLR_CMAKE_PLATFORM_NETBSD 1)
 endif(CMAKE_SYSTEM_NAME STREQUAL NetBSD)
 
+if(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+    set(CLR_CMAKE_PLATFORM_UNIX 1)
+    set(CLR_CMAKE_PLATFORM_UNIX_TARGET_WASM 1)
+endif(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+
 if (CLR_CMAKE_PLATFORM_UNIX)
     include_directories(inc/unix)
 
@@ -143,6 +148,8 @@ elseif(CLR_CMAKE_PLATFORM_UNIX_TARGET_AMD64)
     set(CLR_CMAKE_PLATFORM_ARCH_AMD64 1)
 elseif(CLR_CMAKE_PLATFORM_UNIX_TARGET_I386)
     set(CLR_CMAKE_PLATFORM_ARCH_I386 1)
+elseif(CLR_CMAKE_PLATFORM_UNIX_TARGET_WASM)
+    set(CLR_CMAKE_PLATFORM_ARCH_WASM 1)
 elseif(WIN32)
     if (CLR_CMAKE_TARGET_ARCH STREQUAL x64)
         set(CLR_CMAKE_PLATFORM_ARCH_AMD64 1)
@@ -195,6 +202,9 @@ elseif(CLR_CMAKE_PLATFORM_ARCH_ARM)
 elseif(CLR_CMAKE_PLATFORM_ARCH_ARM64)
   add_definitions(-D_TARGET_ARM64_=1)
   add_definitions(-D_ARM64_)
+elseif(CLR_CMAKE_PLATFORM_ARCH_WASM)
+  add_definitions(-D_TARGET_WASM_=1)
+  add_definitions(-D_WASM_)
 else()
   clr_unknown_arch()
 endif()
