--- a/src/Native/jitinterface/CMakeLists.txt
+++ b/src/Native/jitinterface/CMakeLists.txt
@@ -18,10 +18,17 @@ if(WIN32 AND CLR_CMAKE_PLATFORM_ARCH_AMD64)
     add_definitions(-DFEATURE_REDHAWK)
 endif(WIN32 AND CLR_CMAKE_PLATFORM_ARCH_AMD64)
 
-add_library(jitinterface
-    SHARED
-    ${NATIVE_SOURCES}
-)
+if(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+    add_library(jitinterface
+        STATIC
+        ${NATIVE_SOURCES}
+    )
+else()
+    add_library(jitinterface
+        SHARED
+        ${NATIVE_SOURCES}
+    )
+endif()
 
 install (TARGETS jitinterface DESTINATION tools)
 if(WIN32)
