Conditionally exclude non-applicable libraries when building wasm target.

--- a/src/Native/Runtime/CMakeLists.txt
+++ b/src/Native/Runtime/CMakeLists.txt
@@ -214,5 +214,9 @@ convert_to_absolute_path(PORTABLE_RUNTIME_SOURCES ${PORTABLE_RUNTIME_SOURCES})
 
 convert_to_absolute_path(RUNTIME_SOURCES_ARCH_ASM ${RUNTIME_SOURCES_ARCH_ASM})
 
-add_subdirectory(Full)
+# We don't need the full runtime for WASM.
+if(NOT CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+  add_subdirectory(Full)
+endif(NOT CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+
 add_subdirectory(Portable)
