--- a/dependencies.props
+++ b/dependencies.props
@@ -2,7 +2,8 @@
   <PropertyGroup>
     <RyuJITVersion>2.1.0-preview1-25727-05</RyuJITVersion>
     <ObjectWriterVersion>1.0.19-prerelease-00001</ObjectWriterVersion>
-    <CoreFXVersion>4.5.0-preview2-25621-02</CoreFXVersion>
+    <CoreFxVersion>4.5.0-preview1-25729-01</CoreFxVersion>
+    <CoreFxUapVersion>4.6.0-preview1-25729-01</CoreFxUapVersion>
     <MicrosoftNETCoreNativeVersion>2.0.0-beta-25021-03</MicrosoftNETCoreNativeVersion>
     <MicrosoftNETCoreAppPackageVersion>2.0.0-preview2-25312-01</MicrosoftNETCoreAppPackageVersion>
     <XunitNetcoreExtensionsVersion>1.0.1-prerelease-01616-05</XunitNetcoreExtensionsVersion>
