--- a/src/Native/CMakeLists.txt
+++ b/src/Native/CMakeLists.txt
@@ -91,8 +91,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL NetBSD)
 endif(CMAKE_SYSTEM_NAME STREQUAL NetBSD)
 
 if(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
-    set(CLR_CMAKE_PLATFORM_UNIX 1)
-    set(CLR_CMAKE_PLATFORM_UNIX_TARGET_WASM 1)
+    set(CLR_CMAKE_PLATFORM_WASM 1)
 endif(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
 
 if (CLR_CMAKE_PLATFORM_UNIX)
@@ -148,7 +147,7 @@ elseif(CLR_CMAKE_PLATFORM_UNIX_TARGET_AMD64)
     set(CLR_CMAKE_PLATFORM_ARCH_AMD64 1)
 elseif(CLR_CMAKE_PLATFORM_UNIX_TARGET_I386)
     set(CLR_CMAKE_PLATFORM_ARCH_I386 1)
-elseif(CLR_CMAKE_PLATFORM_UNIX_TARGET_WASM)
+elseif(CLR_CMAKE_PLATFORM_WASM)
     set(CLR_CMAKE_PLATFORM_ARCH_WASM 1)
 elseif(WIN32)
     if (CLR_CMAKE_TARGET_ARCH STREQUAL x64)
@@ -257,12 +256,11 @@ endif()
 add_subdirectory(Runtime)
 add_subdirectory(Bootstrap)
 
-# We don't need jitinterface for WASM.
-if(NOT CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+if(NOT CLR_CMAKE_PLATFORM_WASM)
     add_subdirectory(jitinterface)
-endif(NOT CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+endif(NOT CLR_CMAKE_PLATFORM_WASM)
 
 # We don't need the PAL on Windows.
-if(CLR_CMAKE_PLATFORM_UNIX)
+if(NOT WIN32)
   add_subdirectory(System.Private.CoreLib.Native)
-endif()
+endif(NOT WIN32)
