--- a/src/Native/CMakeLists.txt
+++ b/src/Native/CMakeLists.txt
@@ -94,7 +94,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
     set(CLR_CMAKE_PLATFORM_WASM 1)
 endif(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
 
-if (CLR_CMAKE_PLATFORM_UNIX)
+if (CLR_CMAKE_PLATFORM_UNIX OR CLR_CMAKE_PLATFORM_WASM)
     include_directories(inc/unix)
 
     add_definitions(-DPLATFORM_UNIX=1)
@@ -137,7 +137,7 @@ if (CLR_CMAKE_PLATFORM_UNIX)
     if(CLR_CMAKE_PLATFORM_LINUX)
         set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -Wa,--noexecstack")
     endif(CLR_CMAKE_PLATFORM_LINUX)
-endif(CLR_CMAKE_PLATFORM_UNIX)
+endif(CLR_CMAKE_PLATFORM_UNIX OR CLR_CMAKE_PLATFORM_WASM)
 
 if(CLR_CMAKE_PLATFORM_UNIX_TARGET_ARM)
     set(CLR_CMAKE_PLATFORM_ARCH_ARM 1)
