Enable x86 support for Unix Also enabled cross compilation of x86 binaries on x64 host.
Ubuntu Dockerfiles:

<details>
  <summary><b><ins>Baseline: x64 build on x64 host</ins></b></summary>

```dockerfile
FROM ubuntu
RUN cat /etc/*-release

RUN apt-get update
RUN apt-get install -y \
        autoconf bash clang cmake gcc libtool curl \
        libunwind-dev llvm make openssl lldb git uuid-dev

RUN git clone https://github.com/dotnet/corert -b master --single-branch

WORKDIR /corert

RUN ./build.sh          # or ./build.sh x64

```
</details>

<details>
  <summary><b><ins>PR: x86 build on x86 host</ins></b></summary>

```dockerfile
FROM i386/ubuntu
RUN cat /etc/*-release

RUN apt-get update
RUN apt-get install -y \
        bash clang cmake gcc libtool curl \
        libunwind-dev llvm make openssl lldb git uuid-dev

RUN git clone https://github.com/am11/corert -b linux-x86 --single-branch

WORKDIR /corert

RUN ./build.sh x86
```
</details>

<details>
  <summary><b><ins>PR: x86 build on x64 host</ins></b></summary>

```dockerfile
FROM ubuntu
RUN cat /etc/*-release

RUN apt-get update
RUN apt-get install -y \
        bash clang cmake gcc libtool curl \
        libunwind-dev llvm make openssl lldb git uuid-dev \
        g++-multilib

RUN git clone https://github.com/am11/corert -b linux-x86 --single-branch

WORKDIR /corert

RUN ./build.sh x86
```
</details>

--- a/src/Native/Runtime/CMakeLists.txt
+++ b/src/Native/Runtime/CMakeLists.txt
@@ -42,7 +42,7 @@ set(COMMON_RUNTIME_SOURCES
     thread.cpp
     threadstore.cpp
     UniversalTransitionHelpers.cpp
-    
+
     ../gc/gccommon.cpp
     ../gc/gceewks.cpp
     ../gc/gcwks.cpp
@@ -124,15 +124,15 @@ else()
     )
   endif()
 
+  set(ASM_SUFFIX S)
   if(CLR_CMAKE_PLATFORM_ARCH_AMD64)
     set(ARCH_SOURCES_DIR amd64)
-    set(ASM_SUFFIX S)
   elseif(CLR_CMAKE_PLATFORM_ARCH_ARM64)
     set(ARCH_SOURCES_DIR arm64)
-    set(ASM_SUFFIX S)
   elseif(CLR_CMAKE_PLATFORM_ARCH_ARM)
     set(ARCH_SOURCES_DIR arm)
-    set(ASM_SUFFIX S)
+  elseif(CLR_CMAKE_PLATFORM_ARCH_I386)
+    set(ARCH_SOURCES_DIR i386)
   endif()
 
   list(APPEND RUNTIME_SOURCES_ARCH_ASM
@@ -148,7 +148,7 @@ list(APPEND RUNTIME_SOURCES_ARCH_ASM
   ${ARCH_SOURCES_DIR}/ExceptionHandling.${ASM_SUFFIX}
   ${ARCH_SOURCES_DIR}/Interlocked.${ASM_SUFFIX}
   ${ARCH_SOURCES_DIR}/PInvoke.${ASM_SUFFIX}
-  ${ARCH_SOURCES_DIR}/InteropThunksHelpers.${ASM_SUFFIX}  
+  ${ARCH_SOURCES_DIR}/InteropThunksHelpers.${ASM_SUFFIX}
   ${ARCH_SOURCES_DIR}/StubDispatch.${ASM_SUFFIX}
   ${ARCH_SOURCES_DIR}/UniversalTransition.${ASM_SUFFIX}
   ${ARCH_SOURCES_DIR}/WriteBarriers.${ASM_SUFFIX}
