--- a/src/Native/CMakeLists.txt
+++ b/src/Native/CMakeLists.txt
@@ -64,6 +64,8 @@ if(CMAKE_SYSTEM_NAME STREQUAL Linux)
         set(CLR_CMAKE_PLATFORM_UNIX_TARGET_AMD64 1)
     elseif(CLR_CMAKE_TARGET_ARCH STREQUAL arm)
         set(CLR_CMAKE_PLATFORM_UNIX_TARGET_ARM 1)
+    elseif(CLR_CMAKE_TARGET_ARCH STREQUAL armel)
+        set(CLR_CMAKE_PLATFORM_UNIX_TARGET_ARM 1)
     elseif(CLR_CMAKE_TARGET_ARCH STREQUAL arm64)
         set(CLR_CMAKE_PLATFORM_UNIX_TARGET_ARM64 1)
     elseif(CLR_CMAKE_TARGET_ARCH STREQUAL x86)
