--- a/src/ILVerify/src/ILVerify.csproj
+++ b/src/ILVerify/src/ILVerify.csproj
@@ -17,6 +17,7 @@
     <Compile Include="SimpleTypeSystemContext.cs" />
     <Compile Include="VerifierError.cs" />
     <Compile Include="TypeSystemHelpers.cs" />
+    <Compile Include="InstantiatedGenericParameter.cs" />
   </ItemGroup>
 
   <ItemGroup>
