[ILVerify] Instantiate generic constraints on initialization (#4758)
* Implemented InstantiatedGenericParameter in order to be able to correctly cast constraints with generic parameter instantiations.

* Added test case for casting constrained generic with generic parameter inside constraint.

* Changed InstantiatedGenericParameter to be able to handle complex generic constraints.

* Added GetInstantiatedGenericParameter to TypeSystemContext.

* Changed generic type / method instantation to be created by InstantiatedGenericParameter.

--- a/src/ILVerify/src/ILVerify.csproj
+++ b/src/ILVerify/src/ILVerify.csproj
@@ -17,6 +17,7 @@
     <Compile Include="SimpleTypeSystemContext.cs" />
     <Compile Include="VerifierError.cs" />
     <Compile Include="TypeSystemHelpers.cs" />
+    <Compile Include="InstantiatedGenericParameter.cs" />
     <Compile Include="AccessVerificationHelpers.cs" />
   </ItemGroup>
 
