Add some WellKnown WinRT Types for MiniWinRT
The change is to add some "wellknown" winrt types and these winrt types( are treated specially by MCG/Interop due to projection. The reason to add them type into System.Private.Interop is that dynamic interop need these "wellknown" winrt type to compare with given type. such as  if(type is typeof(IReference)) {//do something special}

Details:
1. System.Private.Interop.CoreCLR.csproj: add $(DefineConstants) to avoid override other Constants
2. System.Private.Interop.Mono.csproj:      add all of these well known winrt types
3. DebugAnnotations.cs:                               this attribute is consumed only by debugger
4. DependencyReductionRootAttribute:     add other attribute Usage
5. InteropExtensions.cs/PInvokeMarshal.cs: default implementation for methods referenced in McgMarshal
6. McgIntrinsics.cs:                                           make necessary #ifdef change to compile new added winrt Types
7. System\Runtime\InteropServices\WindowsRuntime: Wellknown WinRT Type
8. Windows\Foundation\:                                Wellknown WinRT Type

[tfs-changeset: 1678923]

--- a/src/System.Private.Interop/src/System.Private.Interop.CoreCLR.csproj
+++ b/src/System.Private.Interop/src/System.Private.Interop.CoreCLR.csproj
@@ -7,7 +7,7 @@
     <OutputType>Library</OutputType>
     <ProjectGuid>{A85709C9-22D5-4704-8B7A-73751BB4386A}</ProjectGuid>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>TARGET_CORE_API_SET;CORECLR</DefineConstants>
+    <DefineConstants>$(DefineConstants);TARGET_CORE_API_SET;CORECLR</DefineConstants>
     <!-- Disable warning about CLSCompliant attributes on members not being needed. -->
     <NoWarn>$(NoWarn);3021</NoWarn>
     <!-- Use MSFT assembly key for compatibility with uapaot targeting pack -->
