Enable debug info in Release builds of the runtime
Matches what we do in CoreCLR. The crashes on release build are impossible to debug without this.

--- a/src/Native/CMakeLists.txt
+++ b/src/Native/CMakeLists.txt
@@ -228,7 +228,7 @@ if (UPPERCASE_CMAKE_BUILD_TYPE STREQUAL DEBUG)
     add_definitions(-DDEBUG)
     add_definitions(-D_DEBUG)
 elseif (UPPERCASE_CMAKE_BUILD_TYPE STREQUAL RELEASE)
-    add_compile_options (-O3)
+    add_compile_options (-g -O3)
     add_definitions(-DNDEBUG)
 else ()
     message(FATAL_ERROR "Unknown build type. Set CMAKE_BUILD_TYPE to DEBUG or RELEASE.")
