Use WinRT Types from CoreRT
As pointed by Jan, there are duplicate copy of these types in S.R.WR/S.P.Interop and CoreRT.

The change is to remove duplicate copy of WinRT Type in ProjectN and use types from CoreRT instead.

The next step is to remove the duplicate copy in S.R.WR.

[tfs-changeset: 1679183]

--- a/src/System.Private.Interop/src/System.Private.Interop.Mono.csproj
+++ b/src/System.Private.Interop/src/System.Private.Interop.Mono.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Compile Include="Windows\Foundation\IKeyValuePair.cs" />
+    <Compile Include="Windows\Foundation\Collections\IKeyValuePair.cs" />
     <Compile Include="Windows\Foundation\IReference.cs" />
     <Compile Include="Windows\Foundation\Point.cs" />
     <Compile Include="Windows\Foundation\PropertyType.cs" />
