CoreRT dependency graph analysis tool - Add EventSource based instrumentation to dependency graph - Add tool which allows live reading of the data stream - This allows examining the graph of arbitrary compilations without changing command line parameters, as well as examination of the graph as it is being generated (You can attach a debugger to the process and examine the graph while stopped) - There is a small change to the InterfaceDispatchMapNode as querying the name of that node would trigger exceptions with this logger enabled, but while a nice to have, the exception really isn't necessary, so I deleted it
[tfs-changeset: 1679323]

--- a/src/ILCompiler.DependencyAnalysisFramework/src/ILCompiler.DependencyAnalysisFramework.csproj
+++ b/src/ILCompiler.DependencyAnalysisFramework/src/ILCompiler.DependencyAnalysisFramework.csproj
@@ -21,6 +21,7 @@
     <Compile Include="DependencyNode.cs" />
     <Compile Include="DependencyNodeCore.cs" />
     <Compile Include="DgmlWriter.cs" />
+    <Compile Include="EventSourceLogStrategy.cs" />
     <Compile Include="FirstMarkLogStrategy.cs" />
     <Compile Include="FullGraphLogStrategy.cs" />
     <Compile Include="IDependencyAnalyzerLogEdgeVisitor.cs" />
